Content and configuration updates

--- a/doc/grobid-pdf.ipynb
+++ b/doc/grobid-pdf.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GROBID PDF-to-TEI XML Workflow\n",
+    "[GROBID](https://grobid.readthedocs.io/en/latest/), short for *GeneRation Of BIbliographic Data*, is a machine learning\n",
+    "environment that takes raw documents like PDF and generates structured TEI XML files with full-text content and other \n",
+    "related metadata."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pathlib\n",
     "import sys\n",
     "import datetime\n",
-    "sys.path.append(\"/Users/jpnelson/02021/sul-dlss/labs/grobid_client_python/\")\n",
+    "sys.path.append(\"../../grobid_client_python/\")\n",
     "import grobid_client as grobid"
    ]
   },
