--- a/doc/api.ipynb
+++ b/doc/api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "objective-encyclopedia",
+   "id": "exclusive-finger",
    "metadata": {},
    "source": [
     "# SpOc API \n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "constitutional-neighbor",
+   "id": "national-nursery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "similar-transformation",
+   "id": "vulnerable-ancient",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "foster-fraction",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 12820 entries, 0 to 12819\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   Paper ID     12820 non-null  object\n",
+      " 1   Instance ID  12820 non-null  object\n",
+      " 2   Species      12820 non-null  object\n",
+      " 3   GBIF         12820 non-null  object\n",
+      " 4   Time         12820 non-null  object\n",
+      " 5   Place        12820 non-null  object\n",
+      "dtypes: object(6)\n",
+      "memory usage: 701.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_records.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
-   "id": "greek-quantum",
+   "id": "martial-characteristic",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "documented-liabilities",
+   "id": "agricultural-magazine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "sound-apollo",
+   "id": "exposed-antigua",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "solid-growing",
+   "id": "dimensional-cleveland",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "bottom-renewal",
+   "id": "invalid-villa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "eight-pendant",
+   "id": "taken-rings",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "honest-board",
+   "id": "false-gasoline",
    "metadata": {},
    "outputs": [],
    "source": []
