Adds REST API endpoints for Papers and Species Records

--- a/doc/api.ipynb
+++ b/doc/api.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "exclusive-finger",
+   "id": "dimensional-heater",
    "metadata": {},
    "source": [
-    "# SpOc API \n",
-    "The SpOc API updates the species occurrence dataframe used in the Streamlit SpOc Verifier application. The [FastAPI](https://fastapi.tiangolo.com/) can be run from the root directory with:\n",
+    "# SPOC API \n",
+    "The SPOC API updates the species occurrence dataframe used in the Streamlit SpOc Verifier application. The [FastAPI](https://fastapi.tiangolo.com/) can be run from the root directory with:\n",
     "\n",
     "`uvicorn src.api.main:app --reload --root-path src/api/`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "national-nursery",
+   "execution_count": 4,
+   "id": "retired-locking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "vulnerable-ancient",
+   "execution_count": 5,
+   "id": "auburn-capacity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "foster-fraction",
+   "execution_count": 6,
+   "id": "healthy-pursuit",
    "metadata": {},
    "outputs": [
     {
@@ -47,18 +47,19 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 12820 entries, 0 to 12819\n",
-      "Data columns (total 6 columns):\n",
+      "Int64Index: 12148 entries, 0 to 12147\n",
+      "Data columns (total 7 columns):\n",
       " #   Column       Non-Null Count  Dtype \n",
       "---  ------       --------------  ----- \n",
-      " 0   Paper ID     12820 non-null  object\n",
-      " 1   Instance ID  12820 non-null  object\n",
-      " 2   Species      12820 non-null  object\n",
-      " 3   GBIF         12820 non-null  object\n",
-      " 4   Time         12820 non-null  object\n",
-      " 5   Place        12820 non-null  object\n",
-      "dtypes: object(6)\n",
-      "memory usage: 701.1+ KB\n"
+      " 0   Paper ID     12148 non-null  object\n",
+      " 1   Instance ID  12148 non-null  object\n",
+      " 2   Species      12148 non-null  object\n",
+      " 3   GBIF         12148 non-null  object\n",
+      " 4   Time         12148 non-null  object\n",
+      " 5   Place        12148 non-null  object\n",
+      " 6   div_enum     12148 non-null  int64 \n",
+      "dtypes: int64(1), object(6)\n",
+      "memory usage: 759.2+ KB\n"
      ]
     }
    ],
@@ -69,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "martial-characteristic",
+   "id": "approved-pacific",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "agricultural-magazine",
+   "id": "satisfactory-spending",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "exposed-antigua",
+   "id": "forward-internship",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "dimensional-cleveland",
+   "id": "integral-fifteen",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "invalid-villa",
+   "id": "wireless-terrain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "taken-rings",
+   "id": "proof-romantic",
    "metadata": {},
    "outputs": [
     {
@@ -431,8 +432,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "acknowledged-lightning",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "previous-leader",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Paper ID': 'hms_mj526dg0556.tei.xml',\n",
+       "  'Instance ID': 'urn:lsid:marinespecies.org:taxname:249634',\n",
+       "  'Species': 'glandula',\n",
+       "  'GBIF': 'https://www.gbif.org/species/search?q=glandula&qField=SCIENTIFIC',\n",
+       "  'Time': '',\n",
+       "  'Place': '',\n",
+       "  'div_enum': 5},\n",
+       " {'Paper ID': 'fhl_2014_McMahon_34528.tei.xml',\n",
+       "  'Instance ID': 'urn:lsid:marinespecies.org:taxname:395240',\n",
+       "  'Species': 'concholepas',\n",
+       "  'GBIF': 'https://www.gbif.org/species/search?q=concholepas&qField=SCIENTIFIC',\n",
+       "  'Time': '',\n",
+       "  'Place': 'Talmage,Anlauf,Blanchard,Taylor,Marshall,Ross,Pacific,bivalve,Davis',\n",
+       "  'div_enum': 1},\n",
+       " {'Paper ID': 'fhl_2011_Pierce_26647.tei.xml',\n",
+       "  'Instance ID': 'urn:lsid:marinespecies.org:taxname:325914',\n",
+       "  'Species': 'Mus',\n",
+       "  'GBIF': 'https://www.gbif.org/species/search?q=Mus&qField=SCIENTIFIC',\n",
+       "  'Time': '',\n",
+       "  'Place': 'view,cascade,University',\n",
+       "  'div_enum': 2},\n",
+       " {'Paper ID': 'ucla_1978_SkollerDebbie_EnvComplexity.tei.xml',\n",
+       "  'Instance ID': 'urn:lsid:marinespecies.org:taxname:402317',\n",
+       "  'Species': 'Hypsypops rubicunda',\n",
+       "  'GBIF': 'https://www.gbif.org/species/search?q=Hypsypops rubicunda&qField=SCIENTIFIC',\n",
+       "  'Time': '1978-05-05',\n",
+       "  'Place': 'tide',\n",
+       "  'div_enum': 4},\n",
+       " {'Paper ID': 'hms_ms463wm9540.tei.xml',\n",
+       "  'Instance ID': 'urn:lsid:marinespecies.org:taxname:106122',\n",
+       "  'Species': 'Balanus',\n",
+       "  'GBIF': 'https://www.gbif.org/species/search?q=Balanus&qField=SCIENTIFIC',\n",
+       "  'Time': '',\n",
+       "  'Place': 'Hopkins Marine Life Refuge,Pacific Grove',\n",
+       "  'div_enum': 2}]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads(all_records.sample(5).to_json(orient='records'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "false-gasoline",
+   "id": "valuable-findings",
    "metadata": {},
    "outputs": [],
    "source": []
